# crypto-api

./: .env.template  Cargo.toml
src/: main.rs
src/connector/: error.rs  mod.rs
src/connector/kraken/: account.rs  authentication.rs  health.rs  mod.rs  request.rs  settings.rs
src/connector/kraken/account/: account_balance.rs  closed_orders.rs  extended_balance.rs  mod.rs  open_orders.rs  query_orders.rs  trade_balance.rs
src/connector/kraken/spot/: add_order.rs  mod.rs
src/connector/kraken/spot/market_data/: order_book.rs
src/kraken/: health.rs
