[package]
name = "crypto-api"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "^0.22.0"
dotenvy_macro = "^0.15.7"
polars = { version = "^0.39.2", features = ["lazy"] }
reqwest = { version = "^0.12.2", features = ["json"] }
ring = "^0.17.8"
rust_decimal = "1.35.0"
serde = { version = "^1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_with = "^3.7.0"
sha2 = "^0.10.8"
thiserror = "^1.0.58"
tokio = { version = "^1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
